// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-piv-cac-verification renders form with custom PIV/CAC Button label and class 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <form
              class="o-form"
              data-se="o-form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-5"
              >
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-8"
                      data-se="o-form-head"
                      id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root custom-piv-class piv-button emotion-10"
                    tabindex="0"
                    type="button"
                  >
                    My custom PIV Button Label
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-12"
                    role="separator"
                  >
                    <span
                      class="MuiDivider-wrapper emotion-13"
                    >
                      OR
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                      for="identifier"
                    >
                      Username
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                    >
                      <input
                        aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-18"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-19"
                      >
                        <legend
                          class="emotion-20"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                      for="credentials.passcode"
                    >
                      Password
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-24"
                    >
                      <input
                        aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        aria-invalid="false"
                        autocomplete="current-password"
                        class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-25"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        name="credentials.passcode"
                        type="password"
                      />
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-26"
                      >
                        <button
                          aria-controls="credentials.passcode"
                          aria-label="Show password"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-27"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-28"
                            fill="none"
                            focusable="false"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-19"
                      >
                        <legend
                          class="emotion-20"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <fieldset
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-32"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-33"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-34"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-35"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-36"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-37"
                      >
                        Keep me signed in
                      </span>
                    </label>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-39"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                    data-se="unlock"
                    href="javascript:void(0)"
                  >
                    Unlock account?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-45"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-46"
                >
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <div
                      class="MuiBox-root emotion-7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-49"
                        data-se="signup-info"
                        id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_12"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification renders form with idpDisplay as PRIMARY/default 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <form
              class="o-form"
              data-se="o-form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-5"
              >
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-8"
                      data-se="o-form-head"
                      id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  piv-button emotion-10"
                    tabindex="0"
                    type="button"
                  >
                    Sign in with PIV / CAC card
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-12"
                    role="separator"
                  >
                    <span
                      class="MuiDivider-wrapper emotion-13"
                    >
                      OR
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                      for="identifier"
                    >
                      Username
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                    >
                      <input
                        aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-18"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-19"
                      >
                        <legend
                          class="emotion-20"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-16"
                      for="credentials.passcode"
                    >
                      Password
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-24"
                    >
                      <input
                        aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        aria-invalid="false"
                        autocomplete="current-password"
                        class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-25"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        name="credentials.passcode"
                        type="password"
                      />
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-26"
                      >
                        <button
                          aria-controls="credentials.passcode"
                          aria-label="Show password"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-27"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-28"
                            fill="none"
                            focusable="false"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-19"
                      >
                        <legend
                          class="emotion-20"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <fieldset
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-32"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-33"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-34"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-35"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-36"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-37"
                      >
                        Keep me signed in
                      </span>
                    </label>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-39"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                    data-se="unlock"
                    href="javascript:void(0)"
                  >
                    Unlock account?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-45"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-46"
                >
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <div
                      class="MuiBox-root emotion-7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-49"
                        data-se="signup-info"
                        id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_12"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification renders form with idpDisplay as SECONDARY 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <form
              class="o-form"
              data-se="o-form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-5"
              >
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-8"
                      data-se="o-form-head"
                      id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-11"
                      for="identifier"
                    >
                      Username
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-12"
                    >
                      <input
                        aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-13"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-14"
                      >
                        <legend
                          class="emotion-15"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-11"
                      for="credentials.passcode"
                    >
                      Password
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-19"
                    >
                      <input
                        aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        aria-invalid="false"
                        autocomplete="current-password"
                        class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-20"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        name="credentials.passcode"
                        type="password"
                      />
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-21"
                      >
                        <button
                          aria-controls="credentials.passcode"
                          aria-label="Show password"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-22"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                            fill="none"
                            focusable="false"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-14"
                      >
                        <legend
                          class="emotion-15"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <fieldset
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-27"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-28"
                    >
                      <span
                        class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-29"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-30"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-31"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-32"
                      >
                        Keep me signed in
                      </span>
                    </label>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-34"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <div
                    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-36"
                    role="separator"
                  >
                    <span
                      class="MuiDivider-wrapper emotion-37"
                    >
                      OR
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <button
                    aria-describedby="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                    class="MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  piv-button emotion-39"
                    tabindex="0"
                    type="button"
                  >
                    Sign in with PIV / CAC card
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                    data-se="forgot-password"
                    href="javascript:void(0)"
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                    data-se="unlock"
                    href="javascript:void(0)"
                  >
                    Unlock account?
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-6"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-45"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-46"
                >
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <div
                      class="MuiBox-root emotion-7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-49"
                        data-se="signup-info"
                        id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_12"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-6"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-41"
                      data-se="enroll"
                      href="javascript:void(0)"
                    >
                      Sign Up
                    </a>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification should render PIV/CAC view when clicking PIV button 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader authCoinSpacing"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
            <div
              class="iconContainer smart-card-icon authCoinOverlay MuiBox-root emotion-4"
              data-se="factor-beacon"
            >
              <svg
                aria-labelledby="smart-card-icon"
                fill="none"
                height="48"
                role="img"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="smart-card-icon"
                >
                  PIV Card
                </title>
                <path
                  class="siwFillBg"
                  clip-rule="evenodd"
                  d="M24 48c13.255 0 24-10.745 24-24S37.255 0 24 0 0 10.745 0 24s10.745 24 24 24Z"
                  fill="#F5F5F6"
                  fill-rule="evenodd"
                />
                <path
                  class="siwFillSecondary"
                  d="M15 29.5a5 5 0 1 1 4.78-6.5h1.03a6 6 0 1 0 0 3h-1.03A5.013 5.013 0 0 1 15 29.5Z"
                  fill="#A7B5EC"
                />
                <path
                  class="siwFillPrimary"
                  d="M27.5 36a11.433 11.433 0 0 1-6.61-2.088l-.186-.134.592-.806.17.123a10.5 10.5 0 1 0-.166-17.066l-.592-.806A11.5 11.5 0 1 1 27.5 36Z"
                  fill="#00297A"
                />
                <path
                  class="siwFillPrimary"
                  d="m29.354 19.646-.708.708L32.293 24H14.707l1.647-1.646-.708-.708-2.853 2.854 2.853 2.854.708-.708L14.707 25h17.586l-3.647 3.646.708.708 4.853-4.854-4.853-4.854Z"
                  fill="#00297A"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiBox-root emotion-5"
          >
            <form
              class="o-form"
              data-se="o-form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-6"
              >
                <div
                  class="MuiBox-root emotion-7"
                >
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-9"
                      data-se="o-form-head"
                      id="piv-idp_Title_PIV_/_CAC_card_aut2h3ffszv3me6O31d7_1"
                    >
                      PIV / CAC card
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-7"
                >
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-12"
                      data-se="o-form-explain"
                      id="piv-idp_Description_Please_insert_your_PIV_/_CAC_card_and_select_the_user_certificate_aut2h3ffszv3me6O31d7_2"
                    >
                      Please insert your PIV / CAC card and select the user certificate.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-7"
                >
                  <div
                    class="MuiBox-root emotion-14"
                  >
                    <span
                      aria-label="Loading..."
                      aria-valuemax="1"
                      aria-valuemin="0"
                      aria-valuetext="Loading..."
                      class="ods-4o5zYQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs ods-48Fcvf"
                      data-se="okta-spinner"
                      id="okta-spinner"
                      role="progressbar"
                    >
                      <svg
                        class="ods-57SiHN"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          class="ods-3PiY3x"
                          cx="12"
                          cy="12"
                          fill="none"
                          r="10"
                        />
                        <circle
                          class="ods-627kuP"
                          cx="12"
                          cy="12"
                          fill="none"
                          r="10"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <form
          action="http://localhost:3000/sso/idps/MTLS"
          method="get"
          style="display: none;"
        >
          <input
            name="stateTokenExternalId"
            type="hidden"
            value="ZnNzQnZsc0RwK3RuSnVEUTJNYTZIdXc5bzl6UnI4NzBPazloT0lIMy9wd3hSVGlDMDRjRDQ2V2VqeHJuSGcyNQ"
          />
          <input
            type="submit"
          />
        </form>
      </main>
    </span>
  </div>
</div>
`;
